--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -7712,3 +7712,8 @@ a.button {
 .logs .button-log {
   margin: auto;
   font-size: x-large; }
+
+.button-refresh {
+  position: fixed;
+  right: 0px;
+  margin-top: 5px; }
