--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -42,3 +42,6 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
     right: 0px;
     margin-top: 5px;
 }
+.normal-wrap {
+    white-space: normal;
+}
